<resources>
    <string name="app_name">Inventory App</string>
    <string name="sold_button">Sold</string>
    <string name="empty_view_text">Get started by adding a product</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_hint">Book Title</string>
    <string name="product_price">Price</string>
    <string name="product_price_hint">15.99</string>
    <string name="supplier_name_hint">Amazon</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_phone">Supplier Phone</string>
    <string name="supplier_phone_hint">203–220–2380</string>
    <string name="product_quantity">Quantity</string>
    <string name="quantity_button_plus">+</string>
    <string name="quantity_button_minus">-</string>
    <string name="product_quantity_hint">0</string>
    <string name="save_button">Save</string>
    <string name="delete_button">Delete</string>
    <string name="call_button">Call</string>
    <string name="insert_dummy_data">Insert Dummy Data</string>
    <string name="delete_all_products">Delete All</string>
    <string name="dummy_data_title">The Great Alone</string>
    <string name="dummy_data_supplier_name">Amazon</string>
    <string name="dummy_data_supplier_phone">999–999–9999</string>
    <string name="editor_menu_save_action">Save</string>
    <string name="editor_menu_delete_action">Delete</string>
    <string name="editor_title_new_product">Add Product</string>
    <string name="editor_title_edit_product">Edit Product</string>
    <string name="editor_add_product_successful">Product saved</string>
    <string name="editor_add_product_failed">Error with saving product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
    <string name="unsaved_changes_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="call_dialog_msg">Call Now</string>
    <string name="enter_valid_phone_number">Please enter a valid phone number</string>
    <string name="yes">Yes</string>
    <string name="sold">Unavailable</string>
    <string name="quantity_text">Quantity:</string>
    <string name="price_text">Price:</string>
    <string name="dummy_product_quantity">40</string>
    <string name="dummy_product_price">15</string>
    <string name="missing_book_title">Insert the book title</string>
    <string name="missing_book_price">Insert the book price</string>
    <string name="missing_supplier_name">Insert a supplier name</string>
    <string name="missing_supplier_phone">Insert a supplier phone number</string>
</resources>
